re-run the example notebook

--- a/examples/MarrmotM01.ipynb
+++ b/examples/MarrmotM01.ipynb
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "be17d259",
+   "execution_count": 1,
+   "id": "85b02133-aa4b-4135-a733-d00c053a560d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a8564493",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "069ee59d",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "a3203d39",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "5787b59b",
    "metadata": {},
    "outputs": [],
@@ -100,31 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a47a6f73",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:18: UserWarning: \n",
-      "  Thank you for trying out the new ESMValCore API.\n",
-      "  Note that this API is experimental and may be subject to change.\n",
-      "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n",
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:254: ESMValToolDeprecationWarning: `write_plots` will be removed in 2.4.0.\n",
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:255: ESMValToolDeprecationWarning: `write_netcdf` will be removed in 2.4.0.\n",
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_validated_config.py:80: MissingConfigParameter: `drs` is not defined (https://docs.esmvaltool.org/projects/ESMValCore/en/latest/quickstart/configure.html)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ewatercycle.models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "a46d2892",
    "metadata": {},
    "outputs": [
@@ -134,7 +120,7 @@
        "['2020.11']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,17 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "c4bcdad8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f7a0b65f9d0>"
+       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f10da6897f0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,21 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "4185acc3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('maximum_soil_moisture_storage', array([10.])),\n",
-       " ('initial_soil_moisture_storage', array([5.])),\n",
+       "[('maximum_soil_moisture_storage', 10.0),\n",
+       " ('initial_soil_moisture_storage', 5.0),\n",
        " ('solver',\n",
        "  Solver(name='createOdeApprox_IE', resnorm_tolerance=array([0.1]), resnorm_maxiter=array([6.]))),\n",
        " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,18 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "5b41e8f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/examples/marrmot_20210511_144425/marrmot-m01_config.mat'),\n",
-       " PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/examples/marrmot_20210511_144425'))"
+       "(PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210512_151721/marrmot-m01_config.mat'),\n",
+       " PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210512_151721'))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "925fd7bd",
    "metadata": {},
    "outputs": [
@@ -225,13 +211,13 @@
      "data": {
       "text/plain": [
        "[('maximum_soil_moisture_storage', 1234.0),\n",
-       " ('initial_soil_moisture_storage', 900.0),\n",
+       " ('initial_soil_moisture_storage', 5.0),\n",
        " ('solver',\n",
-       "  Solver(name='createOdeApprox_IE', resnorm_tolerance=0.1, resnorm_maxiter=6.0)),\n",
+       "  Solver(name='createOdeApprox_IE', resnorm_tolerance=array([0.1]), resnorm_maxiter=array([6.]))),\n",
        " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "8476fe8a",
    "metadata": {},
    "outputs": [],
@@ -252,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "516620d3",
    "metadata": {},
    "outputs": [],
@@ -262,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "9e12e910",
    "metadata": {},
    "outputs": [
@@ -281,7 +267,7 @@
        " 'wb')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,17 +278,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "c7302682",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.72634888e-08])"
+       "array([0.])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "769635d6",
    "metadata": {},
    "outputs": [
@@ -672,17 +658,17 @@
        "  fill: currentColor;\n",
        "}\n",
        "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;flux_out_Q&#x27; (latitude: 1, longitude: 1)&gt;\n",
-       "array([[1.72634888e-08]])\n",
+       "array([[0.]])\n",
        "Coordinates:\n",
        "  * longitude  (longitude) float64 87.49\n",
        "  * latitude   (latitude) float64 35.29\n",
        "    time       object 1989-01-02 00:00:00\n",
        "Attributes:\n",
-       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-cb05fdc0-8791-4161-ba9e-21f9b9e6f3d9' class='xr-array-in' type='checkbox' checked><label for='section-cb05fdc0-8791-4161-ba9e-21f9b9e6f3d9' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>1.726e-08</span></div><div class='xr-array-data'><pre>array([[1.72634888e-08]])</pre></div></div></li><li class='xr-section-item'><input id='section-245c5a9d-cfa8-42f8-a468-79eb9e549260' class='xr-section-summary-in' type='checkbox'  checked><label for='section-245c5a9d-cfa8-42f8-a468-79eb9e549260' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-61cf3a69-b9ef-48b0-a17d-58fcc5912906' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-61cf3a69-b9ef-48b0-a17d-58fcc5912906' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-0b7cad63-86a3-477b-b4ba-b4b6b6eaeed3' class='xr-var-data-in' type='checkbox'><label for='data-0b7cad63-86a3-477b-b4ba-b4b6b6eaeed3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-05301898-f403-4ae8-b366-70127cf8c6c0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-05301898-f403-4ae8-b366-70127cf8c6c0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2ebd69e3-14c8-469e-be35-70f837d5a200' class='xr-var-data-in' type='checkbox'><label for='data-2ebd69e3-14c8-469e-be35-70f837d5a200' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-02 00:00:00</div><input id='attrs-782566e0-b7ad-40e7-b7d7-99b741e0027e' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-782566e0-b7ad-40e7-b7d7-99b741e0027e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-fe29fa16-18d8-40af-8f00-ad19f01c3062' class='xr-var-data-in' type='checkbox'><label for='data-fe29fa16-18d8-40af-8f00-ad19f01c3062' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 2, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-40ce0e1c-33f6-4979-90be-6acdb70156b9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-40ce0e1c-33f6-4979-90be-6acdb70156b9' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
+       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-643533f3-00f1-4451-9b33-fd361f06e3c9' class='xr-array-in' type='checkbox' checked><label for='section-643533f3-00f1-4451-9b33-fd361f06e3c9' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0</span></div><div class='xr-array-data'><pre>array([[0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-fb93a1cc-8c29-4577-a936-239c4a02c96f' class='xr-section-summary-in' type='checkbox'  checked><label for='section-fb93a1cc-8c29-4577-a936-239c4a02c96f' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-712fcca9-174d-4de1-818a-71665a3b09c3' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-712fcca9-174d-4de1-818a-71665a3b09c3' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a8d798f1-0033-4046-b5ac-93cd9413fa6a' class='xr-var-data-in' type='checkbox'><label for='data-a8d798f1-0033-4046-b5ac-93cd9413fa6a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-e42597b6-d3a4-43e8-aa3e-702473a0b068' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e42597b6-d3a4-43e8-aa3e-702473a0b068' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e2ed1a82-7b66-4ac0-b85c-e3f071ad3380' class='xr-var-data-in' type='checkbox'><label for='data-e2ed1a82-7b66-4ac0-b85c-e3f071ad3380' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-02 00:00:00</div><input id='attrs-f5adc62c-d0e4-4730-8bd0-d523b5f217ba' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-f5adc62c-d0e4-4730-8bd0-d523b5f217ba' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-441cfbe6-69bf-4294-a899-2be4d70280cb' class='xr-var-data-in' type='checkbox'><label for='data-441cfbe6-69bf-4294-a899-2be4d70280cb' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 2, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-0e5eb8e0-7a4c-43a8-852d-2970a20e50a5' class='xr-section-summary-in' type='checkbox'  checked><label for='section-0e5eb8e0-7a4c-43a8-852d-2970a20e50a5' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'flux_out_Q' (latitude: 1, longitude: 1)>\n",
-       "array([[1.72634888e-08]])\n",
+       "array([[0.]])\n",
        "Coordinates:\n",
        "  * longitude  (longitude) float64 87.49\n",
        "  * latitude   (latitude) float64 35.29\n",
@@ -691,7 +677,7 @@
        "    units:    mm day"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "449b8563",
    "metadata": {},
    "outputs": [],
@@ -712,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "1a3f33b0",
    "metadata": {},
    "outputs": [],
