Support overwriting with absolute paths in setup

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e55033f",
+   "id": "fe33c700",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01487c26",
+   "id": "29e3ffd4",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa252692",
+   "id": "f4f4395d",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aba5874",
+   "id": "b11eeb14",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "110e8818",
+   "id": "f3c371e7",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f771839a",
+   "id": "722c6bdc",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a2f0911f",
+   "id": "c66ee20c",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "29f689a2",
+   "id": "e3f1531c",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e32bf6cd",
+   "id": "6a2dddc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8b8ab3d3",
+   "id": "f654f03e",
    "metadata": {},
    "outputs": [
     {
@@ -237,28 +237,30 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2df73bd5",
+   "id": "dea87449",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "cfg_file, cfg_dir = model.setup(\n",
-    "    API = {\"RiverRunoff\": \"2, m^3/s\"}, \n",
-    "    run = {\"starttime\": \"1995-01-31 00:00:00 GMT\", \"endtime\": \"1995-02-27 00:00:00 GMT\"})"
+    "    API = {\"RiverRunoff\": \"2, m^3/s\"},\n",
+    "    run = {\"starttime\": \"1995-01-31 00:00:00 GMT\", \"endtime\": \"1995-02-27 00:00:00 GMT\"},\n",
+    "#     framework = {\"netcdfinput\": \"/home/peter/some_other_dataset.nc\"},  # if absolute path exists, it will be copied to work dir\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5781629a",
+   "id": "e313f850",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_152944/wflow_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_152944'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_152040/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_152040'))"
       ]
      },
      "execution_count": 7,
@@ -273,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7e170b95",
+   "id": "b47826eb",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93ca23b6",
+   "id": "6b67d79f",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -351,13 +353,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a952426c",
+   "id": "432130f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_152944/wflow_ewatercycle.ini')"
+       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_152040/wflow_ewatercycle.ini')"
       ]
      },
      "execution_count": 9,
@@ -372,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c4068482",
+   "id": "5ab82871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b1f0d079",
+   "id": "4aa72fca",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dd1068bf",
+   "id": "8cc0a04a",
    "metadata": {
     "tags": []
    },
@@ -776,13 +778,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1995-01-30 00:00:00\n",
        "Attributes:\n",
-       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-cfe980d2-1746-4e50-968d-bb3cb839951d' class='xr-array-in' type='checkbox' checked><label for='section-cfe980d2-1746-4e50-968d-bb3cb839951d' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-ad809c65-b2fc-44dc-8115-8f2171ba464b' class='xr-array-in' type='checkbox' checked><label for='section-ad809c65-b2fc-44dc-8115-8f2171ba464b' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-be058861-0f19-435c-826b-bba1b14a7a0f' class='xr-section-summary-in' type='checkbox'  checked><label for='section-be058861-0f19-435c-826b-bba1b14a7a0f' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-474543c1-1264-4972-b30f-d4eb1daefc28' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-474543c1-1264-4972-b30f-d4eb1daefc28' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-412ecd2b-b4fd-4ba6-9aef-405c7164b2bf' class='xr-var-data-in' type='checkbox'><label for='data-412ecd2b-b4fd-4ba6-9aef-405c7164b2bf' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-6ee8df5e-7bab-47d2-b864-1fa8a6792d05' class='xr-section-summary-in' type='checkbox'  checked><label for='section-6ee8df5e-7bab-47d2-b864-1fa8a6792d05' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-85088440-c906-4ce3-be4d-e957888fa2c7' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-85088440-c906-4ce3-be4d-e957888fa2c7' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-66b60726-5233-4a77-8d4d-98be29ae51c9' class='xr-var-data-in' type='checkbox'><label for='data-66b60726-5233-4a77-8d4d-98be29ae51c9' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -813,7 +815,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-b7ab1270-8cd1-4c3c-8b83-1c83a4fbc73b' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b7ab1270-8cd1-4c3c-8b83-1c83a4fbc73b' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-d643000d-317f-4afc-9a37-304e3f0c1c66' class='xr-var-data-in' type='checkbox'><label for='data-d643000d-317f-4afc-9a37-304e3f0c1c66' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-b6ba9560-4011-421a-b949-e6cb0ef9d00e' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b6ba9560-4011-421a-b949-e6cb0ef9d00e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-7fe45840-6504-433c-89e4-9b18f9a672b2' class='xr-var-data-in' type='checkbox'><label for='data-7fe45840-6504-433c-89e4-9b18f9a672b2' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -841,7 +843,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-4cec93fa-11f7-4cb8-ad68-d0a77a0d17ce' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-4cec93fa-11f7-4cb8-ad68-d0a77a0d17ce' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-64d8de01-bd22-491f-9335-15d225274bea' class='xr-var-data-in' type='checkbox'><label for='data-64d8de01-bd22-491f-9335-15d225274bea' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3580d7e1-600d-49e6-9ed1-1e1477d73359' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3580d7e1-600d-49e6-9ed1-1e1477d73359' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-e77ac2a0-3eb2-4545-8989-79b09c02f529' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e77ac2a0-3eb2-4545-8989-79b09c02f529' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a5662e7d-d9a7-4555-b4f6-4f03a0f0d47e' class='xr-var-data-in' type='checkbox'><label for='data-a5662e7d-d9a7-4555-b4f6-4f03a0f0d47e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c6df43e0-dae1-47be-a147-a1bde5aa06de' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c6df43e0-dae1-47be-a147-a1bde5aa06de' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -872,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c69e76af",
+   "id": "9b53329b",
    "metadata": {},
    "outputs": [
     {
@@ -919,13 +921,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "64c7a70c",
+   "id": "4521b893",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f3b9dcc4430>"
+       "<matplotlib.collections.QuadMesh at 0x7feb270578e0>"
       ]
      },
      "execution_count": 14,
@@ -953,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "225ee7dd",
+   "id": "6794fdd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9138bedd",
+   "id": "d1173b67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d72902ea",
+   "id": "40509fb5",
    "metadata": {},
    "outputs": [],
    "source": []
